--- a/localization/messages.pot
+++ b/localization/messages.pot
@@ -1,45 +1,23 @@
-# French translations for PROJECT.
-# Copyright (C) YEAR ORGANIZATION
+# Translations template for PROJECT.
+# Copyright (C) 2025 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# Anthony Kimble akimble109@gmail.com, 2025.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2025.
 #
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-06-04 20:12:30+0000\n"
-"PO-Revision-Date: 2025-06-04 20:19:00+0000\n" # Updated revision date
-"Last-Translator: Your Name <youremail@example.com>\n" # Example translator
-"Language: fr\n"
-"Language-Team: fr <LL@li.org>\n"
+"POT-Creation-Date: 2025-06-05 10:02-0500\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n" # Plural forms for French
+"Generated-By: Babel 2.17.0\n"
 
-#: localization/app.py:15
-msgid "Welcome to our application!"
-msgstr "Bienvenue sur notre application !"
+#: app.py:60
+msgid "Hello, World!"
+msgstr ""
 
-#: localization/app.py:16
-msgid "Please log in to continue."
-msgstr "Veuillez vous connecter pour continuer."
-
-#: localization/app.py:17
-msgid "Error: The requested page was not found."
-msgstr "Erreur : La page demandée n'a pas été trouvée."
-
-#: localization/app.py:21
-msgid "Operation completed successfully."
-msgstr "Opération terminée avec succès."
-
-#: localization/app.py:23
-msgid "Operation failed. Please try again."
-msgstr "L'opération a échoué. Veuillez réessayer."
-
-#: localization/app.py:29
-#, python-format
-msgid "You have %(num)d item."
-msgid_plural "You have %(num)d items."
-msgstr[0] "Vous avez %(num)d article."
-msgstr[1] "Vous avez %(num)d articles."
